cluster/apps/networking/traefik/dashboard/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      priority: 10
      # Enable auth middleware
      middlewares:
        - name: rfc1918
        - name: basicauth
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    # Use the secret generated by cert-manager
    # secretName: '${SECRET_DOMAIN/./-}-tls'
    secretName: '${SECRET_DOMAIN/./-}-stage-tls'
